# Advent-of-code-2025

./: README.md
Day 1/src/: main.cpp
Day 2/: CMakeLists.txt
Day 2/src/: main.cpp
Day 3/: CMakeLists.txt
Day 3/src/: main.cpp
Day 4/: CMakeLists.txt
Day 4/src/: main.cpp
Day 5/: CMakeLists.txt
Day 5/src/: main.cpp
Day 6/: CMakeLists.txt
Day 6/src/: main.cpp
Day 7/: CMakeLists.txt  data.txt
Day 7/src/: main.cpp
